Add: MDNS announce every 100 seconds

--- a/data/index.html
+++ b/data/index.html
@@ -18,7 +18,7 @@
       <div class="status" id="status"></div>
       <br class="line" />
       <div class="wrap">
-        <div class="colorPicker"></div>
+        <div class="colorPicker" id="colorPicker"></div>
       </div>
       <br class="line" />
       <div class="slidecontainer">
